--- a/css/style.css
+++ b/css/style.css
@@ -242,38 +242,42 @@
 
     #para4 {
         text-align: center;
-        color: #EEB454;
+        color: #000080;
         font-size: 16pt;
-        font-weight: 500;
-        background-color: #000080;
-        padding: 15px;
+        font-weight: 700;
+        background-color: #aeaef6;
+        padding: 22px;
+        margin-top: 50px;
         margin-left: 31%;
         margin-bottom: 60px;
-        border-radius: 8px;
+        border-top-right-radius: 25px;
+        border-bottom-left-radius: 25px;
         width: 30%;
         float: left;
     }
 
     .button2{
         color: #EEB454;
-        font-size: 16pt;
+        font-size: 10pt;
         font-weight: 400;
         background-color: #000080;
-        padding: 10px 25px;
-        border-radius: 8px;
+        padding: 8px 20px;
+        border-radius: 10px;
         border: 1px solid #000080;
-        margin-right: 370px;
-        margin-top: 30px;
-        margin-bottom: 0px;
-        float: right;
-    
+        margin-right: 420px;
+        margin-left: -10px;
+        margin-top: 75px;
+        margin-bottom: 10px;
+        float: right;    
     }
+    
     .button2:hover {
         background-color: #f6f4f1;
         color: #000080;
+        cursor: pointer;
       }
 
-    .project_heading{
+    .heading{
         color: #21005D;
         text-align: left;
         font-weight: 700;
