--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@
   #Graphic{
     padding-top: 0%;
     padding-left: -15%;
-    padding-bottom: 0%;
+    padding-bottom: 15px;
     float: left;
     width: 100%;
   }
@@ -79,8 +79,8 @@
       text-align: right;
       font-size: 20pt;
       color: #F26322;
-      padding-top: 0px;
-      margin-right: 32%;
+      margin-top: 2%;
+      margin-right: 25%;
       
     }
 
@@ -96,8 +96,8 @@
   #para1 {
       text-align: left;
       color: #21005D;
-      font-size: 16pt;
-      margin-left: 20%;
+      font-size: 17pt;
+      margin-left: 35%;
       margin-bottom: -20px;
       margin-top: -25px;
       width: 36%;
@@ -106,9 +106,9 @@
     p {
       text-align: left;
       color: #000080;
-      font-size: 12pt;
-      margin-left: 30%;
-      width: 36%;
+      font-size: 14pt;
+      margin-left: 35%;
+      width: 41%;
       line-height: 1.6;
       padding-top: 20px;
     }
@@ -117,7 +117,7 @@
       color: #000080;
       font-size: 18pt;
       margin-left: 22.5%;
-      padding-top: 22px;
+      padding-top: 60px;
     }
     
     h3 {
@@ -163,16 +163,18 @@
     }
 
     #para5{
-        font-size: 10pt;
+        font-size: 12pt;
         color: #000080;
         padding: 10px;
         border-bottom-left-radius: 30px;
         border-bottom-right-radius: 30px;
-        width: 270px;
-        margin: 10px;
+        width: 310px;
+        margin: 0px;
         margin-top: -20px;
-        padding-left: 5%;
-        padding-right: 5%;
+        padding-left: 6%;
+        padding-right: 6%;
+        padding-top: 6%;
+        padding-bottom: 8%;
         text-align: left;
         border: solid 0.5pt #c3c2bf;
         background-color: #f5f4f1;
@@ -180,6 +182,7 @@
 
     #myskills{
         margin-top: 5%;
+        margin-bottom: 5%;
         border: solid 1px #000080;
     }
 
@@ -196,17 +199,30 @@
     margin-top: 10px;
   }
 
+  #userResearch{
+    margin-right: 1%;
+  }
+
+  #userInterfaceDesign{
+    margin-right: 1%;
+  }
+
+  #webDevelopment{
+    margin-right: 1%;
+  }
+
     .YellowBar{
         padding-left: 20%;
         padding-bottom: 1%;
         margin-top: -27px;
+        margin-bottom: 30px;
     }
 
     #categoryGrid{
         display: grid;
         grid-template-columns: 1fr 1fr;
-        grid-row-gap: 50px;
-        grid-column-gap: 80px;
+        grid-row-gap: 60px;
+        grid-column-gap: 90px;
         padding-bottom: 50px;
         padding-top: -20px;
         padding-left: 25%;
