--- a/css/style.css
+++ b/css/style.css
@@ -460,32 +460,22 @@
     }
 
 
-    /* For desktop: */
-.col-1 {width: 8.33%;}
-.col-2 {width: 16.66%;}
-.col-3 {width: 25%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
-.col-6 {width: 0%;}
-.col-7 {width: 58.33%;}
-.col-8 {width: 66.66%;}
-.col-9 {width: 75%;}
-.col-10 {width: 83.33%;}
-.col-11 {width: 91.66%;}
-.col-12 {width: 100%;}
 
-@media screen and (min-width: 768px) 
+@media only screen and (min-width: 768px) 
 and (max-width: 1023px) {
    {
     width: 100%;
   }
 }
 
-@media screen and (min-width: 1024px) {
-  {
-   width: 100%;
+@media only screen and (min-width: 1024px) {
+  
+   .navbar{
+    width: 100%;
+   }
+   
  }
-}
+
 
 
 
